--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,5 +13,23 @@
         <button class="btn btn-success" type="submit">Add a new post</button>
     </form>
 
+    <table border="1">
+        <thead>
+        <tr>
+            <th>Create date</th>
+            <th>Post</th>
+            <th>User</th>
+        </tr>
+        </thead>
+
+        <tbody>
+        <tr th:each="post : ${allPosts}">
+                <td th:text="${post.createDate}">  </td>
+                <td th:text="${post.text}">  </td>
+                <td th:text="${(idAndLogin.get(post.userId))}"  ></td>
+        </tr>
+        </tbody>
+    </table>
+
 </body>
 </html>
