--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -20,8 +20,9 @@
            placeholder="Password" name="password"/>
 
     <button type="submit">Login</button>
-
 </form>
-
+<form action="/registerForm">
+    <button class="btn btn-success" type="submit">Sign up</button>
+</form>
 </body>
 </html>
